--- a/index.html
+++ b/index.html
@@ -1,6 +1,18 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-</body>
-</html>
+  <head>
+    <meta charset="utf-8">
+    <title class="Top-link">ノアの日記</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <div class="header">
+      <div class="header-logo">ノアの日記</div>
+      <div class="header-list">
+        <ul>
+          <li>記事一覧</li>
+          <li>変更履歴</li>
+          <li>注意事項</li>
+        </ul>
+      </div>
+    </div>
