--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div class="header">
+    <div>
       <div class="header-logo">ノアの日記</div>
       <div class="header-list">
         <ul>
