--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title class="Top-link">ノアの日記</title>
-    <link rel="stylesheet" href="Style.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div>
+    <div class="header">
       <div class="header-logo">ノアの日記</div>
       <div class="header-list">
         <ul>
@@ -15,5 +15,4 @@
           <li>注意事項</li>
         </ul>
       </div>
-    </div>
-    </html>    
+    </div>  
