--- a/index.html
+++ b/index.html
@@ -16,3 +16,24 @@
         </ul>
       </div>
     </div>  
+    
+    <div>
+       <div class="main">
+          <h1 class="main-top">Minecraft <span>Bedrock</span> Client</h1>
+          <ul>
+              <li>Horion</li>
+              <li>Badman</li>
+              <li>Pocket</li>
+              <li>Zephyr</li>
+          </ul>
+          <div class="client-item">
+            <img src="Photo/HorionClient2.png" width="100" height="100">
+            <p>Horion Client</p>
+            <img src="Photo/Packet.jpg" width="100" height="100">
+            <p>Packet Client</p>
+            <img src="Photo/Onix.jpg" widht="100" height="100">
+            <p>Onix Client</p>
+            <img src="Photo/Strike.jpg" widht="100" height="100">
+            <p>Strike Client</p>
+          </div>
+    </div>
